bridge/base/0-proyecto-ganaderia-namespace.yaml
#! 0-proyecto-ganaderia-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: proyecto-ganaderia
    labels:
        com.docker.compose.project: proyecto_ganaderia
